# arch_test

./: .gitignore  README.md
.github/workflows/: ci.yml
crates/arch_test_core/: Cargo.toml
crates/arch_test_core/src/analyzer/materials/: architecture.rs
crates/arch_test_core/src/analyzer/services/: access_rule.rs  cyclic_dependency.rs
crates/arch_test_core/src/analyzer/tests/access_rules/: mod.rs
crates/arch_test_core/src/analyzer/tests/access_rules/exclude_modules/: file_1.rs  file_2.rs  file_3.rs  main.rs
crates/arch_test_core/src/analyzer/tests/access_rules/layer_dependency_direction/: application.rs  infra.rs  main.rs
crates/arch_test_core/src/parser/materials/: module_tree.rs
crates/arch_test_core/src/parser/services/: parser.rs
crates/arch_test_core/src/parser/tests/module_tree/: mod.rs
crates/arch_test_core/src/parser/tests/parser/traits/: impl_body_generic.rs  match_patterns.rs  mod.rs  trait_default_body.rs  where_clause.rs
crates/cargo-archtest/: Cargo.toml
crates/cargo-archtest/src/: main.rs
crates/cargo-archtest/src/domain_values/: specification.rs
crates/cargo-archtest/src/services/: check_architecture.rs  parse_specification.rs
examples/: architecture.json
examples/example_test/: Cargo.toml
examples/example_test/src/: main.rs
